New method and little refactor

--- a/PolishVATFront/src/app/product/product.component.html
+++ b/PolishVATFront/src/app/product/product.component.html
@@ -3,7 +3,7 @@
         <tr ngclass="btn-primary">
             <th class="tbl2">VAT Name</th>
         </tr>
-        <tr *ngFor="let vat of allProducts | async">
+        <tr *ngFor="let vat of allVats | async">
             <td class="tbl2">{{vat}}</td>
         </tr>
     </table>
